<resources>
    <string name="app_name">Github contributors</string>
    <string name="search_label_company">Company</string>
    <string name="search_label_repository">Repository</string>
    <string name="search_button">Search</string>
    <string name="company_edittext_default">zeroturnaround</string>
    <string name="repository_edittext_default">zt-zip</string>
    <string name="contributors_list_item_contribution">Contributions: %1$s</string>
    <string name="menu_title_picasso">Picasso</string>
    <string name="menu_title_fresco">Fresco</string>
    <string name="menu_title_glide">Glide</string>
    <string name="title_activity_contributor">Contributor</string>
    <string name="title_activity_contributors">Contributors</string>
</resources>
